<resources>
    <string name="app_name">IGNITION</string>
    <string name="sign_in">Sign in</string>
    <string name="Ignition">IGNITION</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="department">Department</string>
    <string name="roll">Roll</string>
    <string name="Roll">Roll</string>
    <string name="registration_no">Registration no</string>
    <string name="no">NO.</string>
    <string name="year">year</string>
    <string name="date_of_admission">Date of Admission</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile number</string>
    <string name="submit">Submit</string>
    <string name="browse">Browse</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>