<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.ADDSTUDENT">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_student_name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Abhi" />

    <EditText
        android:id="@+id/deptET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/department"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        android:autofillHints="CSE" />

    <EditText
        android:id="@+id/rollET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/Roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationET"
        android:inputType="number"
        android:autofillHints="13030" />

    <EditText
        android:id="@+id/RegistrationET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/registration_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deptET"
        android:inputType="textNoSuggestions"
        android:autofillHints="D2101" />

    <EditText
        android:id="@+id/noET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollET"
        android:autofillHints="8910" />

    <EditText
        android:id="@+id/yearET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noET"
        android:autofillHints="3" />

    <EditText
        android:id="@+id/AdmissionET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/date_of_admission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearET"
        android:autofillHints="21/2/2024"
        android:inputType="" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdmissionET"
        android:autofillHints="abhi@gmail.com"
        android:inputType=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <RadioGroup
        android:id="@+id/genderRG"
        android:layout_width="wrap_content"
        android:layout_height="88dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneET"
        app:layout_constraintVertical_bias="0.615">

        <RadioButton
            android:id="@+id/maleRB"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:text="@string/male"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AdmissionET"
            app:layout_constraintVertical_bias="0.335" />

        <RadioButton
            android:id="@+id/femaleRB"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/female"
            app:layout_constraintStart_toStartOf="@id/maleRB"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="746dp" />

    </RadioGroup>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/browse"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"

        android:text="@string/browse"
        app:layout_constraintBottom_toTopOf="@+id/submit"

        app:layout_constraintEnd_toStartOf="@+id/upload"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toEndOf="@+id/genderRG"
        app:layout_constraintTop_toBottomOf="@+id/phoneET"
        app:layout_constraintVertical_bias="0.909" />

    <Button
        android:id="@+id/upload"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:layout_marginEnd="72dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/phoneET"
        app:layout_constraintVertical_bias="0.212" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/upload"
        app:layout_constraintTop_toBottomOf="@+id/phoneET"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/ic_upload"
        android:contentDescription="@string/todo" />




</androidx.constraintlayout.widget.ConstraintLayout>